[package]
name = "planner-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
toml_edit = "0.19.8"
